fix: added few fields
